# epub-gpt

./: .gitignore  1 ana_de_las_tejas_verdes.epub.db  Amor_liquido_Zygmunt_Bauman.epub.db  Dockerfile  README.md  __main__.py  api.py  inyection.py  pyproject.toml  requeriments.txt  setup.py  test.epub  test.xhtml  upload_epub.py
epub_lib/gpt/: gpt_client_interface.py  poe_api.py  repo.py
epub_lib/gpt/epub_process/: epub_processor.py  xhtml_processor.py
epub_lib/gpt/epub_process/db/: database.py  interface.py  repo.py
epub_lib/gpt/epub_process/db/vector_store/: interface.py  vector_database.py
gpt/: gpt_functions.py  interface.py  poe_api.py  repo.py
gpt/epub_process/: xhtml_processor.py
gpt/epub_process/db/: interface.py  json_database.py  repo.py  vector_database.py
