[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epub-gpt"
version = "0.0.1"
authors = [
    { name="xxx", email="xxx@gmail.com" },
]
description = "API for analyzing and process with LLM an EPUB file"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/cesarllb/epub-gpt"
"Bug Tracker" = "https://github.com/cesarllb/epub-gpt/issues"
